# continuebee

./: .gitignore  CLAUDE.md  MAGIC-ROUTES.md  README.md
docs/: .achievements.md.swp  achievements.md
java/spring-server/: Dockerfile  README.md  build.gradle  docker-compose.yml  settings.gradle
java/spring-server/env/: .env_api  .env_db
java/spring-server/src/main/resources/: application-local.yaml  application.yaml
rust/server/: .env_example  Cargo.toml
rust/server/src/: main.rs  test_common.rs
rust/server/src/config/: app_state.rs  config.rs  mod.rs
rust/server/src/handlers/: create_user_handler.rs  delete_user_handler.rs  get_user_handler.rs  mod.rs  query.rs  request.rs  response.rs  update_hash_handler.rs
rust/server/src/storage/: client.rs  file_storage_client.rs  mod.rs  pub_key.rs  storage_client.rs  user.rs  user_client.rs
src/client/javascript/: README.md  continuebee.js  package-lock.json  package.json
src/server/deno/: main.ts
src/server/deno/src/persistence/: user.ts
src/server/node/: continuebee.js  package-lock.json  package.json  server.js
src/server/node/config/: local.js
src/server/node/data/k/: eys
src/server/node/data/user_0a1f1100-dd04-471c-8a21-d0627c/ae3/: cdb
src/server/node/data/user_21e498a1-8906-4394-8846-79769c/b39/: 4a2
src/server/node/src/magic/: magic.js
src/server/node/src/persistence/: client.js  db.js
src/server/node/src/user/: user.js
test/mocha/: client.js  magic-spells.js  package-lock.json  package.json  server.js  test.js
test/mocha/test/: test.js
(+53 files in other folders)
