[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
axum = "0.8.1" 
dotenv = "0.15.0"
secp256k1 = "0.30.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sessionless = { version = "0.1.1", features = ["uuid"] }
sqlx = { version= "0.8.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
axum = { version = "0.8.1", features = ["macros"] }
